<resources>
    <string name="app_name">Tripo</string>
    <string name="google_maps_key">AIzaSyCVOvMSNN18_AJKQjfKfoWKxsYNF5GNxK0</string>

    <string name="login_btn">login</string>
    <string name="create_account">Create new account?</string>
    <string name="signUp_btn">sign up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Upcoming">Upcoming</string>
    <string name="History">History</string>
    <string name="Map">Map</string>
    <string name="Sync">Sync</string>
    <string name="SignOut">Sign out</string>
    <string name="Date">13/06/2021</string>
    <string name="Time">5:45 PM</string>
    <string name="Start">Alexandria</string>
    <string name="End">Cairo</string>
    <string name="Name">Trial Trip</string>
    <string name="StartTrip">Start Trip</string>
    <string name="notes">notes</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="tripName">Trip Name: </string>
    <string name="startPoint">Start Point: </string>
    <string name="endPoint">End Point: </string>
    <string name="addTrip">add trip</string>
    <string name="fragTag">fragTag</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="channel_name">channel_name_mnem</string>
    <string name="channel_description">channel_description_motaz</string>
    <string name="txt">some txt</string>
    <string name="flashLightOn">flashLightOn</string>
    <string name="close">close</string>
    <string name="appImage">appImage</string>
    <string name="done_btn">done</string>
    <string name="save_note_btn">save</string>
    <string name="login_ways">Login with:</string>
    <string name="google_btn">sign in with google</string>
    <string name="facebook_btn">facebook</string>
    <string name="delete_btn_note">delete</string>
    <string name="cancel">cancel trip</string>
    <string name="btnStart">start</string>
    <string name="from">Alex</string>
    <string name="to">cairo</string>
    <string name="Snooze">Snooze</string>
    <string name="splashText">Easy To Remember Your Trpis</string>

    <string-array name="status">
        <item>One Way</item>
        <item>Round Trip</item>
    </string-array>

    <string-array name="data">
        <item>No_Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>