<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/Upcoming" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/Map" />
    </group>
    <group
        android:id="@+id/menu_second_grp"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sync"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/Sync"
            android:onClick="clickedOption"/>
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/SignOut"
            android:onClick="clickedOption"/>
    </group>
</menu>