<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:weightSum="100">

    <ImageView
        android:id="@+id/notifiation_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:contentDescription="@string/appImage"
        android:src="@drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:gravity="center"
        android:text="@string/flashLightOn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/closeOnFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/close" />
</LinearLayout>