<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/notification_title_lbl"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/txt"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/notification_body_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notification_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/style_border"
            android:text="@string/StartTrip"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/notification_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/style_border"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>