<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_upcoming">

    <!--fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidproject.navigation_drawer_activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.androidproject.navigation_drawer_activity.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.androidproject.navigation_drawer_activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" /-->
    <fragment
        android:id="@+id/nav_upcoming"
        android:name="com.example.androidproject.navigation_drawer_activity.ui.upcoming.UpcomingFragment"
        android:label="@string/Upcoming"
        tools:layout="@layout/upcoming_fragment"
        />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.androidproject.navigation_drawer_activity.ui.history.HistoryFragment"
        android:label="@string/History"
        tools:layout="@layout/history_fragment"
        />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.androidproject.navigation_drawer_activity.ui.map.MapFragment"
        android:label="@string/Map"
        tools:layout="@layout/map_fragment"
        />
</navigation>