<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/trip_row_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border">

            <ImageButton
                android:id="@+id/trip_row_notesBtn"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/notebook3"
                android:contentDescription="@string/notes"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/trip_row_startLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Start"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/trip_row_endLbl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/End"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/trip_row_startLbl"
                app:layout_constraintTop_toBottomOf="@+id/trip_row_startLbl" />

            <TextView
                android:id="@+id/trip_row_timeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Time"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trip_row_dateLbl" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/trip_row_timeLbl"
                app:layout_constraintTop_toBottomOf="@+id/trip_row_timeLbl"
                app:srcCompat="@drawable/arrow" />

            <ImageButton
                android:id="@+id/trip_row_optionsBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ellipsis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trip_row_dateLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Date"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trip_row_nameLbl" />

            <TextView
                android:id="@+id/trip_row_nameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/Name"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@android:drawable/toast_frame"
                android:text="@string/StartTrip"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_secondary_variant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trip_row_endLbl" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>