<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAFAF1"
    app:layout_constraintCircleRadius="20dp"
    tools:context=".AddTripActivity">


    <EditText
        android:id="@+id/etTripName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/tripName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/startPoint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTripName" />

    <fragment
        android:id="@+id/source"
        android:name="com.google.android.libraries.places.compat.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartPoint" />

    <TextView
        android:id="@+id/tvEndPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/endPoint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source" />

    <fragment
        android:id="@+id/dest"
        android:name="com.google.android.libraries.places.compat.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEndPoint" />

    <!--    <EditText-->
    <!--        android:id="@+id/etRepeat"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="repreat"-->
    <!--        android:inputType="textPersonName"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        tools:layout_editor_absoluteY="437dp" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/etWay"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="way"-->
    <!--        android:inputType="textPersonName"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/etRepeat"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/etRepeat" />-->

    <Button
        android:id="@+id/btnAddTrip"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/style_border"
        android:text="@string/addTrip"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="#394B41"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStatus" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/calender"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/dest" />

    <Button
        android:id="@+id/btnTime"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/clock"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/btnDate"
        app:layout_constraintEnd_toEndOf="@+id/tvTime"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toTopOf="@+id/btnDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/setDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/setTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent" />


    <Spinner
        android:id="@+id/spinnerRepeat"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/data"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerStatus"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:dropDownSelector="@color/purple_700"
        android:entries="@array/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

</androidx.constraintlayout.widget.ConstraintLayout>